enum-ptr-test/tests/fail/lifetime_map.stderr
error: lifetime may not live long enough
  --> tests/fail/lifetime_map.rs:15:34
   |
14 |     foo.map_ref(|f| match f {
   |                  -- return type of closure is &'2 &i32
   |                  |
   |                  has type `&'1 Foo<'_, '_>`
15 |         Foo::A(r) | Foo::B(r) => r,
   |                                  ^ returning this value requires that `'1` must outlive `'2`

error: lifetime may not live long enough
  --> tests/fail/lifetime_map.rs:22:34
   |
21 |     foo.map_mut(|f| match f {
   |                  -- return type of closure is &'2 mut &i32
   |                  |
   |                  has type `&'1 mut Foo<'_, '_>`
22 |         Foo::A(r) | Foo::B(r) => r,
   |                                  ^ returning this value requires that `'1` must outlive `'2`
